# SinergIA

./: .gitignore  LICENSE  README.md  app.py  inicio.py  main.py  pyproject.toml  requirements.txt
backend/_plantillas/: form_campos.html  form_login.html  form_pagina.html  formulario.html  head.html  informe_tabla.html  macros_form.html  macros_informe.html  manifest.json  pdf.css  tabla.css  tabla.html
backend/documentos/: adaptadores.py  constructores.py  dominio.py  formularios.py  interacciones.py  modelos.py  operaciones.py  servicio.py  validadores.py  web_fastapi.py  web_flask.py
backend/participantes/: __init__.py  adaptadores.py  dominio.py  servicio.py  web_fastapi.py  web_flask.py
backend/plantillas/: tabla.html
backend/prueba/: controlador.py  datos.py  dominio.py  enrutador.py  esquemas.db  esquemas.json  servicio.py
backend/pysinergia/: __init__.py  adaptadores.py  datos.py  dominio.py  entorno.py  global.py  globales.py  infra_datos.py  infra_interfaz.py  infra_web.py  infraestructura.py  interfaces.py  interfaz.py  nucleo.py  servicio.py  servicios.py  web.py
doc/: diagramas.vsd
docs/: diagramas.vsd  ~$$diagramas.~vsd
frontend/jsinergia/: AdaptadorApi.js  ApiLocal.js  ApiOpenAI.js  BibliotecaBase.js  DefinicionModulo.js  _encriptar.js  adaptador_api.js  api_local.js  api_openai.js  definicion_modulo.js  jsinergia.js
frontend/prueba/: cache.json  estilos.css  index.html  inicio.js  manifest.json  sw.js
frontend/sinergia/: index.html
locales/es/: documentos.po
pysinergia/: README.md  __init__.py  adaptadores.py  archivos.py  config.py  doc.txt  dominio.py  globales.py  interacciones.py  modelos.py  operaciones.py  servicio.py  sql.py  web.py  web_fastapi.py  web_flask.py
pysinergia/_dependencias/: __init__.py  adaptadores.py  dominio.py  servicio.py  web_fastapi.py  web_flask.py
pysinergia/base/: __init__.py  fastapi.py  flask.py
pysinergia/complementos/: convertidor_audio.py  exportador.py  exportador_csv.py  exportador_excel.py  exportador_markdown.py  exportador_pdf.py  exportador_word.py
pysinergia/componentes/: __init__.py  web_fastapi.py  web_flask.py
pysinergia/conectores/: almacen.py  almacen_chroma.py  almacen_faiss.py  archivos.py  basedatos.py  basedatos_mysql.py  basedatos_postgresql.py  disco.py  llm.py  (+5 more)
(+99 files in other folders)
